log
Mon Apr 20 02:11:18 AM UTC 2026: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:39: error: passing argument 1 of ‘malloc’ makes integer from pointer without a cast [-Wint-conversion]
   48 |     HashMap *map = (HashMap *) malloc(map, sizeof(HashMap));
      |                                       ^~~
      |                                       |
      |                                       HashMap * {aka struct HashMap *}
In file included from test.c:2:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:672:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘HashMap *’ {aka ‘struct HashMap *’}
  672 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |                      ~~~~~~~^~~~~~
hashmap.c:48:32: error: too many arguments to function ‘malloc’
   48 |     HashMap *map = (HashMap *) malloc(map, sizeof(HashMap));
      |                                ^~~~~~
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:672:14: note: declared here
  672 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
8a6d08a
Mon Apr 20 02:24:58 AM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 5/60
dfea671
Mon Apr 20 02:28:55 AM UTC 2026: 
 hashmap.c | 34 ++++++++++++++++++++++++++++++++--
 1 file changed, 32 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:98:10: error: unused variable ‘posicionInicial’ [-Werror=unused-variable]
   98 |     long posicionInicial = posicion;
      |          ^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
8591820
Mon Apr 20 02:29:36 AM UTC 2026: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|2
total_score: 40/60
ff725b3
Mon Apr 20 02:33:43 AM UTC 2026: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 50/60
163cf22
Mon Apr 20 02:53:40 AM UTC 2026: 
 hashmap.c | 22 +++++++++++++++-------
 1 file changed, 15 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:171:26: error: ‘old_capacity’ undeclared (first use in this function)
  171 |     for (long i = 0; i < old_capacity; i++) {
      |                          ^~~~~~~~~~~~
hashmap.c:171:26: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:165:10: error: unused variable ‘capacidad_antigua’ [-Werror=unused-variable]
  165 |     long capacidad_antigua = map->capacity;
      |          ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
63d5a30
Mon Apr 20 02:54:10 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 60/60
c542388
